@@ -48,6 +48,7 @@ import java.util.Properties;
 import javax.ws.rs.GET;
 import javax.ws.rs.POST;
 import javax.ws.rs.Path;
+import javax.ws.rs.Produces;
 
 /**
  *
@@ -64,85 +65,134 @@ public class TemplateProcessorTest extends AbstractResourceTester {
         @GET public Viewable get() {
             return new Viewable("show", "get");
         }
-        
+
         @POST public Viewable post() {
             return new Viewable("show", "post");
-        }        
+        }
     }
-    
+
     public void testExplicitTemplate() throws IOException {
         ResourceConfig rc = new DefaultResourceConfig(ExplicitTemplate.class,
                 TestTemplateProcessor.class);
         initiateWebApplication(rc);
         WebResource r = resource("/");
-        
+
         Properties p = new Properties();
-        p.load(r.get(InputStream.class));        
+        p.load(r.get(InputStream.class));
         assertEquals("/com/sun/jersey/impl/template/TemplateProcessorTest/ExplicitTemplate/show.testp", p.getProperty("path"));
         assertEquals("get", p.getProperty("model"));
-        
+
         p = new Properties();
-        p.load(r.post(InputStream.class));        
+        p.load(r.post(InputStream.class));
         assertEquals("/com/sun/jersey/impl/template/TemplateProcessorTest/ExplicitTemplate/show.testp", p.getProperty("path"));
-        assertEquals("post", p.getProperty("model"));        
+        assertEquals("post", p.getProperty("model"));
     }
-    
+
     @Path("/")
     public static class ImplicitTemplate {
         public String toString() {
             return "ImplicitTemplate";
-        } 
+        }
     }
-    
+
     public void testImplicitTemplate() throws IOException {
         ResourceConfig rc = new DefaultResourceConfig(ImplicitTemplate.class,
                 TestTemplateProcessor.class);
         rc.getFeatures().put(ResourceConfig.FEATURE_IMPLICIT_VIEWABLES, true);
         initiateWebApplication(rc);
         WebResource r = resource("/");
-        
+
         Properties p = new Properties();
-        p.load(r.get(InputStream.class));        
+        p.load(r.get(InputStream.class));
         assertEquals("/com/sun/jersey/impl/template/TemplateProcessorTest/ImplicitTemplate/index.testp", p.getProperty("path"));
         assertEquals("ImplicitTemplate", p.getProperty("model"));
     }
-    
+
     @Path("/")
     public static class ImplicitExplicitTemplate {
         public String toString() {
             return "ImplicitExplicitTemplate";
-        } 
-        
+        }
+
         @POST public Viewable post() {
             return new Viewable("show", "post");
-        }        
-        
+        }
+
         @Path("sub") @GET public Viewable get() {
             return new Viewable("show", "get");
         }
     }
-    
+
     public void testImplicitExplicitTemplate() throws IOException {
         ResourceConfig rc = new DefaultResourceConfig(ImplicitExplicitTemplate.class,
                 TestTemplateProcessor.class);
         rc.getFeatures().put(ResourceConfig.FEATURE_IMPLICIT_VIEWABLES, true);
         initiateWebApplication(rc);
         WebResource r = resource("/");
-        
+
         Properties p = new Properties();
-        p.load(r.get(InputStream.class));        
+        p.load(r.get(InputStream.class));
         assertEquals("/com/sun/jersey/impl/template/TemplateProcessorTest/ImplicitExplicitTemplate/index.testp", p.getProperty("path"));
         assertEquals("ImplicitExplicitTemplate", p.getProperty("model"));
-        
+
         p = new Properties();
-        p.load(r.post(InputStream.class));        
+        p.load(r.post(InputStream.class));
         assertEquals("/com/sun/jersey/impl/template/TemplateProcessorTest/ImplicitExplicitTemplate/show.testp", p.getProperty("path"));
-        assertEquals("post", p.getProperty("model"));        
-        
+        assertEquals("post", p.getProperty("model"));
+
         p = new Properties();
-        p.load(r.path("sub").get(InputStream.class));        
+        p.load(r.path("sub").get(InputStream.class));
         assertEquals("/com/sun/jersey/impl/template/TemplateProcessorTest/ImplicitExplicitTemplate/show.testp", p.getProperty("path"));
-        assertEquals("get", p.getProperty("model"));        
+        assertEquals("get", p.getProperty("model"));
     }
-    
+
+    @Path("/")
+    public static class ImplicitWithGetTemplate {
+        @GET
+        @Produces("application/foo")
+        public String toString() {
+            return "ImplicitWithGetTemplate";
+        }
+    }
+
+    public void testImplicitWithGetTemplate() throws IOException {
+        ResourceConfig rc = new DefaultResourceConfig(ImplicitWithGetTemplate.class,
+                TestTemplateProcessor.class);
+        rc.getFeatures().put(ResourceConfig.FEATURE_IMPLICIT_VIEWABLES, true);
+        initiateWebApplication(rc);
+        WebResource r = resource("/");
+
+        Properties p = new Properties();
+        p.load(r.accept("text/plain").get(InputStream.class));
+        assertEquals("/com/sun/jersey/impl/template/TemplateProcessorTest/ImplicitWithGetTemplate/index.testp", p.getProperty("path"));
+        assertEquals("ImplicitWithGetTemplate", p.getProperty("model"));
+
+        assertEquals("ImplicitWithGetTemplate", r.accept("application/foo").get(String.class));
+    }
+
+    @Path("/")
+    public static class ImplicitWithSubResourceGetTemplate {
+        @Path("sub")
+        @GET
+        @Produces("application/foo")
+        public String toString() {
+            return "ImplicitWithSubResourceGetTemplate";
+        }
+    }
+
+    public void testImplicitWithSubResourceGetTemplate() throws IOException {
+        ResourceConfig rc = new DefaultResourceConfig(ImplicitWithSubResourceGetTemplate.class,
+                TestTemplateProcessor.class);
+        rc.getFeatures().put(ResourceConfig.FEATURE_IMPLICIT_VIEWABLES, true);
+        initiateWebApplication(rc);
+        WebResource r = resource("/sub");
+
+        Properties p = new Properties();
+        p.load(r.accept("text/plain").get(InputStream.class));
+        assertEquals("/com/sun/jersey/impl/template/TemplateProcessorTest/ImplicitWithSubResourceGetTemplate/sub.testp", p.getProperty("path"));
+        assertEquals("ImplicitWithSubResourceGetTemplate", p.getProperty("model"));
+
+        assertEquals("ImplicitWithSubResourceGetTemplate", r.accept("application/foo").get(String.class));
+    }
+
 }
